app/component/map/map.scss
/* ... */
.location-popup-wrapper {
  display: flex;
  flex-direction: column;
  font-size: 16px;
  margin: 15px 14px 10px;

  .location-address {
    font-size: 0.9375em;
    font-weight: $font-weight-medium;
  }

  .location-place {
    margin-top: 4px;
    font-size: 0.8125em;
    display: flex;
    flex-direction: row;

    .zone-icon-container {
      margin-left: 6px;
    }

    .circle {
      padding: 0 3px 0 2px;

      &.A {
        padding: 0 3px 0 3px;
      }

      &.B {
        padding: 0 3px 0 2.5px;
      }

      &.D {
        padding: 0 3px 0 3px;
      }
    }
  }
}

.popup {
  .route-header {
    height: auto;
    border: none;
  }

  .leaflet-popup-content-wrapper {
    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
    padding: 0;
    margin-bottom: 5px;
    border-radius: 5px;
  }

  .leaflet-popup-content {
    margin: 0;

    &.leaflet-popup-scrolled {
      overflow: inherit;
      height: auto !important;
    }
  }

  .card {
    border: none;
    border-radius: 4px;

    > a {
      display: block;
    }

    hr {
      height: 1px;
      color: #ddd;
      background: #ddd;
      font-size: 0;
      border: 0;
    }

    .card-row .no-margin:last-child hr {
      display: none;
    }
  }

  .card.no-margin {
    margin: 0;
  }

  .card-header {
    border-radius: $border-radius;
  }

  .bottom {
    @include font-medium;

    font-size: 16px;
    line-height: $line-height-normal;
    color: $link-color;
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin: 0 10px 10px;
    border-radius: 5px;
    background: $white;
    border: solid 1px #ddd;

    &.indoor-step-popup-container {
      line-height: 0;
      margin: 0;
      padding: 10px 0 10px;
      border: none;
      border-top: 1px solid #ddd;
      border-radius: 0;
      flex-direction: column;

      .indoor-step-popup-icons {
        flex-direction: row;
        font-size: 20px;

        .icon-container {
          display: inline-flex;
          align-items: center;
          justify-content: center;

          > svg.icon.indoor-step-popup-icon {
            width: 2em;
          }

          > svg.icon.arrow-popup-icon {
            color: black;
            height: 0.5em;
            width: 0.5em;
          }
        }
      }

      .indoor-step-popup-line-container {
        .indoor-step-popup-line {
          background-size: auto 100%;
          background-position-y: 0;
          background-position-x: 0;
          background-repeat: repeat no-repeat;
          border: none;
          border-radius: 3px;
          margin: 10%;
          height: 6px;
          min-width: 50px;
        }

        .indoor-step-popup-line-circle-container {
          position: absolute;
          min-width: 0;

          .indoor-step-popup-line-circle {
            border: none;
            min-width: 0;
            margin: 11px;

            > svg > circle.indoor-step-marker {
              fill: #fff;
              stroke: #666;

              &.selected {
                fill: #666;
                stroke: #fff;
                filter: drop-shadow(0 1px 1px rgba(51, 51, 51, 1));
                r: 8;
              }
            }
          }
        }
      }
    }

    div,
    a,
    button {
      height: 26px;
      min-width: 100px;
      display: flex;
      font-size: 0.8125em;
      justify-content: center;
      align-items: center;
      flex-grow: 1;
      text-align: center;
      text-decoration: none;
      border-left: 1px solid $light-gray;

      &:first-child {
        border-left: none;
      }
    }

    button {
      @include font-medium;
    }
  }

  .leaflet-popup-tip-container {
    margin-top: -6px;

    .leaflet-popup-tip {
      width: 15px;
      height: 15px;
    }
  }
}

.single-popup {
  .leaflet-popup-content {
    width: 320px;
  }
}

.narrow-popup {
  .leaflet-popup-content {
    width: 220px;
  }
}

.choice-popup {
  .leaflet-popup-content {
    min-width: 240px;
    width: max-content;
  }
}

.leaflet-popup-content-wrapper,
.leaflet-popup-tip {
  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
}

div.origin-popup {
  font-size: $font-size-xxsmall;
  cursor: pointer;
  min-width: 15em;
  left: -21px !important;

  .origin-popup-header {
    @include font-medium;

    text-transform: uppercase;
    color: $link-color;
    width: 90%;
    margin-bottom: 3px;

    .icon {
      margin: 0 0 -2px 8px;
      font-size: $font-size-small;
    }
  }

  .leaflet-popup-content-wrapper {
    border-radius: $border-radius;
    padding: 0;
    overflow: hidden;

    .leaflet-popup-content {
      margin: 12px 8px 8px 8px;

      svg.right-arrow {
        height: 9px;
      }

      .card-code {
        margin-right: 5px;
        padding: 2px;
      }
    }
  }

  .origin-popup-name {
    @include font-book;

    height: 1.5em;
    width: 200px;
    text-transform: none;
    color: $black;
    font-size: $font-size-small;
    overflow: hidden;
  }

  .shade-to-white {
    background-image: linear-gradient(to left, white, rgba(255, 255, 255, 0));
    width: 2em;
    height: 1.5em;
    position: absolute;
    right: 0;
    top: 2em;
  }

  .leaflet-popup-tip-container {
    position: relative;
    left: 0;
    margin: 0 0;
  }
}

.vehicle-number-container-v-map {
  position: relative;
  bottom: 40px;
  left: 41px;

  .vehicle-number-map {
    margin-right: 1.5em;
    margin-left: 0.3em;
    mask-image: none;
    max-width: none;
  }
}

.route-header {
  .route-header-trip {
    position: relative;
    height: 1.5em;
    margin-top: 0.2em;
    margin-left: 1.5em;
    font-size: 70%;
    padding: 0.1em 0.4em;
    border: solid 1px $light-gray;
    border-radius: $border-radius;
    color: $gray;
  }
}

.map .stop-halo {
  fill: #fff;
  fill-opacity: 1;
}

.map .stop {
  stroke: currentcolor;
  stroke-opacity: 1;
  fill: #fff;
  fill-opacity: 1;
}

.map .icon.stop-marker {
  width: auto;
  height: auto;
}
/* ... */

